--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: De la data, du Machine Learning et du Deep Learning
-subtitle: ###
+title: Cécile Guillot
+subtitle: Data Analyst/Ingénieure Machine Learning
 ---
