--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Cécile Guillot
-subtitle: Data Analyst/Ingénieure Machine Learning
+subtitle: Data Analyst & Ingénieure Machine Learning
 ---
